css/styles.css
html {
  box-sizing: border-box;
  font-size: 62.5%;
  scroll-behavior: smooth;
  min-height: 100vh;
  cursor: none;
}

#__next {
  min-height: 100vh;
  background-color: #fdecd2;
}

/* stylelint-disable */
*,
*::before,
*::after {
  box-sizing: inherit;
}
/* stylelint-enable */

:root {
  font-size: 12px;
}
body {
  font-size: 1.6rem;
  min-height: 100vh;
  --color-text: #000;
  --color-bg: #fdecd2;
  --color-link: #d75828;
  --color-link-hover: #fff;
  --color-gallery-title: #463832;
  --color-gallery-number: #ffffff;
  --color-gallery-link: #fff;
  --color-gallery-link-bg: #d75828;
  --color-gallery-link-hover: #fff;
  --color-gallery-link-bg-hover: #d4b77d;
  color: var(--color-text);
  background-color: var(--color-bg);
  --cursor-stroke: none;
  --cursor-fill: #ffffff;
  --cursor-stroke-width: 1px;
  color: var(--color-text);
  background-color: var(--color-bg);
  --cursor-stroke: none;
  --cursor-fill: #c5681c;
  --cursor-stroke-width: 1px;
  font-family: Montserrat, sans-serif;
  font-weight: 300;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Page Loader */
.js .loading::before,
.js .loading::after {
  content: "";
  position: fixed;
  z-index: 1000;
}

.js .loading::before {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--color-bg);
}

.js .loading::after {
  top: 50%;
  left: 50%;
  width: 60px;
  height: 60px;
  margin: -30px 0 0 -30px;
  border-radius: 50%;
  opacity: 0.4;
  background: var(--color-link);
  animation: loaderAnim 0.7s linear infinite alternate forwards;
}

@keyframes loaderAnim {
  to {
    opacity: 1;
    transform: scale3d(0.5, 0.5, 1);
  }
}

a {
  text-decoration: none;
  color: var(--color-link);
  outline: none;
}

a:hover,
a:focus {
  color: var(--color-link-hover);
  outline: none;
}

.frame {
  padding: 3rem 5vw;
  text-align: center;
  position: relative;
  z-index: 1000;
  text-transform: uppercase;
}

.frame__title {
  font-size: 1rem;
  margin: 0 0 1rem;
  font-weight: 300;
}

.frame__links {
  display: inline;
}

.frame__links a:not(:last-child) {
  margin-right: 1rem;
}

.frame__demo {
  margin: 0 1rem;
}

.frame__demo--current,
.frame__demo--current:hover {
  color: var(--color-text);
  cursor: default;
}

.content {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 13rem);
  position: relative;
  justify-content: flex-start;
}

.cursor {
  display: none;
}

@media screen and (min-width: 53em) {
  .frame {
    position: fixed;
    text-align: left;
    z-index: 100;
    top: 0;
    left: 0;
    display: grid;
    align-content: space-between;
    width: 100%;
    max-width: none;
    padding: 1.75rem;
    pointer-events: none;
    grid-template-columns: auto 1fr 1fr auto;
    grid-template-rows: auto;
    grid-template-areas: "title demos demos links";
  }
  .frame__title {
    margin: 0 4rem 0 0;
    grid-area: title;
  }
  .frame__info {
    grid-area: info;
  }
  .frame__demos {
    grid-area: demos;
  }
  .frame__links {
    grid-area: links;
    padding: 0;
    justify-self: end;
  }
  .frame a {
    pointer-events: auto;
  }
  .content {
    height: 100vh;
    justify-content: center;
  }
}

@media (any-pointer: fine) {
  .cursor {
    position: fixed;
    top: 0;
    left: 0;
    display: block;
    pointer-events: none;
  }

  .cursor__inner {
    fill: var(--cursor-fill);
    stroke: var(--cursor-stroke);
    stroke-width: var(--cursor-stroke-width);
    opacity: 0.7;
  }

  .no-js .cursor {
    display: none;
  }
}

/*! locomotive-scroll v4.0.4 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
html.has-scroll-smooth {
  overflow: hidden;
}

html.has-scroll-dragging {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.has-scroll-smooth body {
  overflow: hidden;
}

.has-scroll-smooth [data-scroll-container] {
  min-height: 100vh;
}

[data-scroll-direction="horizontal"] [data-scroll-container] {
  white-space: nowrap;
  height: 100vh;
  display: inline-block;
  white-space: nowrap;
}

[data-scroll-direction="horizontal"] [data-scroll-section] {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  height: 100%;
}

.c-scrollbar {
  position: absolute;
  right: 0;
  top: 0;
  width: 11px;
  height: 100%;
  transform-origin: center right;
  transition: transform 0.3s, opacity 0.3s;
  opacity: 0;
}
.c-scrollbar:hover {
  transform: scaleX(1.45);
}
.c-scrollbar:hover,
.has-scroll-scrolling .c-scrollbar,
.has-scroll-dragging .c-scrollbar {
  opacity: 1;
}
[data-scroll-direction="horizontal"] .c-scrollbar {
  width: 100%;
  height: 10px;
  top: auto;
  bottom: 0;
  transform: scaleY(1);
}
[data-scroll-direction="horizontal"] .c-scrollbar:hover {
  transform: scaleY(1.3);
}

.c-scrollbar_thumb {
  position: absolute;
  top: 0;
  right: 0;
  background-color: black;
  opacity: 0.5;
  width: 7px;
  border-radius: 10px;
  margin: 2px;
  cursor: -webkit-grab;
  cursor: grab;
}
.has-scroll-dragging .c-scrollbar_thumb {
  cursor: -webkit-grabbing;
  cursor: grabbing;
}
[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
  right: auto;
  bottom: 0;
}

.gallery {
  display: flex;
  margin-left: 12vw;
  padding-right: 12vw;
  height: 100%;
  align-items: center;
}

.card-tags {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 0.5rem;
  margin-left: 3rem;
}

.card-tag--text {
  font-size: 1.4rem;
  font-family: Montserrat;
  font-weight: 700;
  text-transform: uppercase;
  color: #fdecd2;
  background-color: #091422;
  padding: 0.5rem 1rem;
  margin-right: 0.5rem;
}

.card-tag--text:last-of-type {
  margin-right: 0;
}

.cards {
  display: flex;
  height: 90%;
  justify-content: top;
  align-items: flex-end;
}

.card:nth-child(even) {
  align-self: flex-start;
}

.card {
  margin: 0 5rem;
  width: 100%;
  position: relative;
  padding: 3rem;
}

/* .background-card--info {
  position: absolute;
  top: 5%;
  left: 5%;
  transform: translate(-5%, -5%);
  width: 102%;
  height: 102%;
  background-color: #fe4f51;
  border: 0.3rem solid #091422;
} */

.card-info {
  position: relative;
  padding: 1rem 1.5rem;
  width: 100%;
  border: 0.3rem solid #091422;
}

.card:hover {
  cursor: pointer;
}

.card:hover .button-top {
  animation: rotation 4s infinite linear;
  cursor: pointer;
  webkit-animation-play-state: running;
}

.card:hover .card-info:after {
  top: 0%;
  left: 0%;
}

.card-info:after {
  content: "";
  position: absolute;
  display: block;
  background: inherit;
  border-radius: inherit;
  border: inherit;
  top: 3%;
  left: 5%;
  width: 100%;
  height: 100%;
  z-index: -1;
  transition: all 0.2s ease-in-out;
}

.card-info--red {
  background-color: #fe4f51;
}

.card-info--yellow {
  background-color: #ffeb3d;
}

.card-info--green {
  background-color: #4fc8b1;
}

.card-fase {
  font-size: 1rem;
  font-family: Montserrat;
  font-weight: 700;
  text-transform: uppercase;
  color: #091422;
  padding-bottom: 1rem;
  text-align: center;
}

.card-title {
  margin-bottom: 3rem;
}

.title-project {
  font-size: 2.8rem;
  font-family: Montserrat;
  font-weight: 700;
  text-transform: uppercase;
  color: #091422;
}

.title-name {
  font-size: 2.8rem;
  font-family: Montserrat;
  font-weight: 900;
  text-transform: uppercase;
  color: #091422;
  -webkit-text-stroke: 1.5px;
  letter-spacing: 0.15rem;
  text-stroke: 1px #091422;
  -webkit-text-fill-color: transparent;
  text-fill-color: transparent;
}

.card-image {
  margin-bottom: 10rem;
  border: 0.4rem solid #091422;
  width: 100%;
  height: 100%;
}

.card-button {
  position: absolute;
  bottom: -3%;
  right: -3%;
}

.buttons {
  position: relative;
}

.button-top {
  position: relative;
  animation: rotation 4s infinite linear;
  width: 100%;
  height: 100%;
  bottom: 0%;
  right: 0%;
  animation-play-state: paused;
  webkit-animation-play-state: paused;
}

.button-top:hover {
  animation: rotation 4s infinite linear;
  cursor: pointer;
  animation-play-state: running;
  webkit-animation-play-state: running;
}

/* .buttons:hover .button-top {
  right: 5%;
  top: -5;
} */

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

.button-background {
  position: absolute;
  top: 10%;
  left: 10%;
  /* transform: translate(-35%, -35%); */
  transition: all 0.2s ease-in-out;
}

.text-large {
  font-size: 10vw;
  line-height: 0.5;
  margin-right: 5rem;
  text-transform: uppercase;
  color: var(--color-gallery-title);
  color: transparent;
  -webkit-text-stroke: 0.4rem #091422;
  text-stroke: 0.4rem #091422;
  -webkit-text-fill-color: transparent;
  text-fill-color: transparent;
  font-weight: 900;
  font-family: Montserrat;
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 100%;
}

.text-large--fill {
  -webkit-text-fill-color: #091422;
  text-fill-color: #091422;
}

.text-large--inner {
  display: block;
}
.text-large--inner-2 {
  font-size: 9vw;
}

.navigation {
  background-color: #091422;
  height: 100vh;
  width: 6rem;
  position: fixed;
  z-index: 1;
  padding: 1.5rem 0;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.nav-logo {
  width: auto;
  display: flex;
  justify-content: center;
  position: relative;
  margin-bottom: 5rem;
}

.nav-logo--image {
  width: 100%;
  position: absolute;
  padding: 0 1.5rem;
  cursor: pointer;
}

.item {
  width: 100%;
  display: flex;
  align-items: center;
  cursor: pointer;
  margin: 2rem 0;
  padding: 0.5rem 0;
}

.nav-item {
  display: flex;
  flex-direction: column;
  min-width: 6rem;
  align-items: center;
}

.nav-item--title {
  font-family: Montserrat, sans-serif;
  color: #fdecd2;
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: 800;
  visibility: hidden;
  white-space: nowrap;
  transition-delay: 0s;
  opacity: 0;
  transition-duration: 0.2s;
  margin-left: -3rem;
}

.nav-item--small {
  font-family: Montserrat, sans-serif;
  color: #fdecd2;
  font-size: 1.1rem;
  font-weight: 500;
  visibility: hidden;
  white-space: nowrap;
  transition-delay: 0s;
  opacity: 0;
  transition-duration: 0.2s;
  margin-left: -3rem;
}

.navigation:hover .nav-item--title,
.navigation:hover .nav-item--small {
  visibility: visible;
  opacity: 1;
  transition-delay: 0.2s;
  transition-duration: 0.2s;
  margin-left: 0;
}

.nav-profile {
  display: flex;
  width: 100%;
  align-items: center;
  flex-direction: column;
}

.profile {
  width: 100%;
  display: flex;
  align-items: center;
  cursor: pointer;
  padding: 0 0 1rem 0;
}

.nav-profile--image {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.nav-profile--image img {
  border: 0.2rem solid #fdecd2;
  border-radius: 50%;
  object-fit: cover;
  max-width: 3rem;
}

.profile-button {
  background-color: transparent;
  border: none;
  width: 100%;
  display: flex;
  align-items: center;
  cursor: pointer;
  padding: 1rem 0;
}

.cursor {
  pointer-events: none;
  position: fixed;
  top: 0;
  left: 0;
  mix-blend-mode: difference;
  z-index: 1000;
}

.cursor__ball circle {
  fill: #dfd6ca;
}

.form {
  min-height: 100vh;
}

.profile_button {
  background-color: transparent;
  border: none;
  width: 100%;
  display: flex;
  align-items: center;
  cursor: pointer;
  padding: 0;
}

#id_img {
  width: 100%;
  height: 100%;
  overflow: hidden;
  object-fit: cover;
}

